daq/picodaq/SDK/inc/plcm3Api.h


typedef enum enPLCM3Channels
{
  PLCM3_CHANNEL_1 = 1,
  PLCM3_CHANNEL_2,
  PLCM3_CHANNEL_3,
  PLCM3_MAX_CHANNELS = PLCM3_CHANNEL_3
} PLCM3_CHANNELS;


typedef enum enPLCM3DataType
{
  PLCM3_OFF,
  PLCM3_1_MILLIVOLT,
  PLCM3_10_MILLIVOLTS,
  PLCM3_100_MILLIVOLTS,
  PLCM3_VOLTAGE,
PLCM3_MAX_DATA_TYPES
} PLCM3_DATA_TYPES;


typedef enum enPLCM3IpDetailsType
{
  PLCM3_IDT_GET,
  PLCM3_IDT_SET,
} PLCM3_IP_DETAILS_TYPE;


typedef enum enPLCM3CommunicationType
{
  PLCM3_CT_USB = 0x00000001,
  PLCM3_CT_ETHERNET = 0x00000002,
  PLCM3_CT_ALL = 0xFFFFFFFF
}PLCM3_COMMUNICATION_TYPE;


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3Enumerate)
(
  int8_t   *details,
  uint32_t *length,
  PLCM3_COMMUNICATION_TYPE type
);


PREF0 PREF1 PICO_STATUS PREF2  PREF3 (PLCM3OpenUnit)
(
  int16_t * handle,
  int8_t  * serial
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3OpenUnitViaIp)
(
  int16_t * handle,
  int8_t  * serial,
  int8_t  * ipAddress
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3CloseUnit)
(
  int16_t handle
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3IpDetails)
(
  int16_t   handle,
  int16_t  *enabled,
  int8_t   *ipaddress,
  uint16_t *length,
  uint16_t *listeningPort,
  PLCM3_IP_DETAILS_TYPE type
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3GetUnitInfo)
(
  int16_t handle,
  int8_t * string,
  int16_t stringLength,
  int16_t * requiredSize,
  PICO_INFO info
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3SetChannel)
(
  int16_t handle,
  PLCM3_CHANNELS channel,
  PLCM3_DATA_TYPES type
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3SetMains)
(
  int16_t handle,
  uint16_t sixtyHertz
);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (PLCM3GetValue)
(
  int16_t handle,
  PLCM3_CHANNELS channel,
  int32_t * value
);